@@ -345,4 +345,15 @@ function data_util.picture_with_glow(image, glow, tint)
   return pictures
 end
 
+
+function data_util.create_melting_from_lava_icon(molten_metal_icon, byproduct_icon)
+  icons = {
+    {icon = "__space-age__/graphics/icons/fluid/lava.png", icon_size = 64, scale = 0.7, shift = {-4, 0}},
+    {icon = molten_metal_icon, icon_size = 64, scale = 1, shift = {-6, 8}},
+    {icon = byproduct_icon, icon_size = 64, scale = 0.4, shift = {12, 20}},
+  }
+
+  return icons
+end
+
 return data_util
